--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,102 @@
     transform: rotate(360deg);
   }
 }
+
+.bigContainer {
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-top: 200px;
+  }
+ 
+.titleContainer {
+  display:flex;
+  flex-direction: column;
+  width: 45%;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: left;
+  }
+
+.smallContainer {
+  display:flex;
+  flex-direction: row;
+  text-align: left;
+  width: 50%;
+  justify-content:flex-end ;
+  }
+
+.mediumContainer {
+  display:flex;
+  flex-direction: column;
+  width: 46%;
+  }  
+
+.filterBox{
+width: 25%;
+background-color: lightgray;
+margin:45px 10px 15px 15px;
+padding: 10px 0px 5px 10px;
+border-radius:5%;
+height: 30px;
+}
+
+.vegtBox{
+  width: 100%;
+  background-color: lightgray;
+  margin:10px 10px 15px 15px;
+  padding: 10px 5px 5px 10px;
+  border-radius:5%;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.dropdown {
+  position: relative;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  top:45px;
+  right:0px;
+  width: 200px;
+  background-color: white;
+  font-weight:bold;
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+li a {
+  color: #000;
+  text-decoration: none;
+}
+li {
+  padding: 8px 16px;
+  border-bottom: 1px solid black;
+}
+li:last-child {
+  border-bottom: none;
+}
+li:hover {
+  background-color: #e5e5e5;
+  color: white;
+}
+.button{
+  width:100%;
+  height:30px;
+  font-weight:bold;
+  color:black;
+}
+.button:before{
+  content:"";
+  position:absolute;
+  width:0px;
+  height:0px;
+  border: 10px solid;
+  border-color: black transparent transparent transparent;
+  right:6px;
+  top:18px;
+}
